--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/html-pdf": "^3.0.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "googleapis": "^100.0.0",
+    "html-pdf": "^3.0.1",
+    "html-pdf-node": "^1.0.8",
     "mime-types": "^2.1.35",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
